--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "simplebar-react": "^3.2.1",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
